--- a/package.json
+++ b/package.json
@@ -19,22 +19,23 @@
     "!**/__tests__"
   ],
   "dependencies": {
-    "clone": "^2.1.0"
+    "clone": "^2.1.0",
+    "lodash.kebabcase": "^4.1.1"
   },
   "devDependencies": {
-    "ava": "^0.17.0",
+    "ava": "^0.25.0",
     "babel-cli": "^6.4.0",
     "babel-core": "^6.4.0",
-    "babel-eslint": "^7.1.1",
+    "babel-eslint": "^10.0.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-2": "^6.3.13",
-    "coveralls": "^2.11.9",
-    "eslint": "^3.12.2",
-    "eslint-config-i-am-meticulous": "^5.0.2",
+    "coveralls": "^3.0.2",
+    "eslint": "^5.6.1",
+    "eslint-config-i-am-meticulous": "^11.0.0",
     "eslint-plugin-import": "^2.2.0",
     "markdown-it": "^8.2.2",
-    "npmpub": "^3.1.0",
-    "nyc": "^10.0.0"
+    "npmpub": "^4.1.0",
+    "nyc": "^13.0.1"
   },
   "scripts": {
     "prepublish": "babel --ignore __tests__ src --out-dir dist",
